clusters/production/infrastructure/monitoring/grafana/grafana-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-https
  namespace: monitoring
spec:
  parentRefs:
    - name: external
      namespace: gateway
      sectionName: https-wildcard
  hostnames:
    - "grafana.mill3r.la"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana-service
          port: 3000
